[project]
name = "veld-fm"
version = "0.1.0"
description = "A modern, tileable, terminal-based file manager built with Python and Textual"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"

dependencies = [
    "linkify-it-py==2.0.3",
    "markdown-it-py==3.0.0",
    "mdit-py-plugins==0.4.2",
    "mdurl==0.1.2",
    "platformdirs==4.3.8",
    "Pygments==2.19.1",
    "rich==14.0.0",
    "textual==3.3.0",
    "textual-autocomplete==4.0.4",
    "toml==0.10.2",
    "typing_extensions==4.14.0",
    "uc-micro-py==1.0.3",
    "Pillow==10.4.0",
    "textual-image==0.8.4",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
repository = "https://github.com/BranBushes/veld-fm"

[project.scripts]
veld = "veld:main"
